# annoy-multi-index

./: .gitignore  README.md  pyproject.toml
annoy_multi_index/: main.py
annoy_multi_index/dataset/: __init__.py  load.py
annoy_multi_index/model/: __init__.py  annoy.py
