[tool.poetry]
name = "annoy-multi-index"
version = "0.1.0"
description = ""
authors = ["china_syuke"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
numpy = "^1.18.1"
pandas = "^1.0.1"
annoy = "^1.16.3"
torch = "^1.4.0"
keras = "^2.3.1"
theano = "^1.0.4"
opencv-python = "^4.2.0"
tqdm = "^4.43.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
